staging/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rlgl-server
  namespace: staging
  annotations:
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rlgl-server
    spec:
      containers:
      - name: rlgl-server
        image: moxielogic/rlgl-server:v1.0.0-135-g787b72c
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 9101
          protocol: TCP
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /etc/rlgl
          name: rlgl-server-config
      volumes:
      - name: rlgl-server-config
        configMap:
          name: rlgl-server-config
          items:
          - key: config.ini
            path: config.ini
