staging/pod-keycloak-postgresql.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: keycloak-postgresql
  namespace: staging
  labels:
    app: keycloak-postgresql
spec:
  containers:
    - name: postgresql
      image: postgres:latest
      volumeMounts:
      - mountPath: "/var/lib/postgresql"
        name: keycloak-postgresql-volume
	  secretKeyRef:
	    name: rlgl-secrets
	    key: keycloak-postgresql-password
      - name: POSTGRES_USER
        value: "keycloak"
      - name: POSTGRES_DB
        value: "keycloak"
  volumes:
    - name: keycloak-postgresql-volume
      persistentVolumeClaim:
        claimName: keycloak-postgresql-pvc
