staging/pod-tkeycloak.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: tkeycloak
  namespace: staging
  labels:
    app: tkeycloak
spec:
  containers:
    - name: keycloak
      image: jboss/keycloak:latest
      volumeMounts:
      - mountPath: /tmp/rlgl-server-realm
        name: rlgl-server-realm
  volumes:
  - name: rlgl-server-realm
    configMap:
      name: rlgl-server-realm
      items:
      - key: rlgl-server-realm.json
        path: rlgl-server-realm.json
