staging/svc-keycloak-postgresql.yaml
apiVersion: v1
kind: Service
metadata:  
  name: keycloak-postgresql
  namespace: staging
spec:
  selector:    
    app: keycloak-postgresql
  type: ClusterIP
  ports:  
  - name: postgresql
    port: 5432
    targetPort: 5432
    protocol: TCP
