staging/svc-keycloak.yaml
apiVersion: v1
kind: Service
metadata:  
  name: keycloak
  namespace: staging
spec:
  selector:    
    app: rlgl-server
  type: ClusterIP
  ports:  
  - name: keycloak
    port: 5432
    targetPort: 5432
    protocol: TCP
