staging/svc-postgresql.yaml
apiVersion: v1
kind: Service
metadata:  
  name: postgresql
  namespace: staging
spec:
  selector:    
    app: rlgl-server
  type: ClusterIP
  ports:  
  - name: postgresql
    port: 5432
    targetPort: 5432
    protocol: TCP
