staging/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-staging-keycloak
  namespace: staging
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: staging-keycloak.rl.gl
    http:
      paths:
      - path: /
        backend:
          serviceName: keycloak
          servicePort: 8080
